--- a/event.html
+++ b/event.html
@@ -6,7 +6,7 @@
         <body bgcolor="Black" style="color:white">
             <center>
             <h1>Upcoming Events 🗓️</h1>
-            <p>Don't miss it!</p>
+            <p>Don't miss it!!!</p>
             </center>
             <hr>
             <p>
